# LunaSim

./: .gitignore  Guide.md  README.md  create.html  engine.js  guide.html  index.html  main.js  structure.json
backend/: README.md  main.py  pyproject.toml  requirements.txt  vercel.json
backend/src/: constants.py  databaseutils.py
backend/src/api/: auth.py  user.py
components/: background.js  component.js  connector.js  contextManager.js  converter.js  flow.js  hyperCanvas.js  stock.js
components/vis/: LineGraph.js  Modal.js
frontend/: package.json  tsconfig.json  vercel.json
frontend/app/: layout.tsx
frontend/app/(app)/: auth.js  page.tsx
frontend/app/(app)/dashboard/: documentCard.tsx  page.tsx
frontend/app/(app)/login/: page.tsx
frontend/app/_components/: AccountNavbar.tsx  GeneralNavbar.tsx
frontend/public/env/: create.html  engine.js  main.js
frontend/public/env/components/: background.js  component.js  connector.js  contextManager.js  converter.js  creatorWidget.js  flow.js  hyperCanvas.js  stock.js
frontend/public/env/components/vis/: Graph.js  LineGraph.js  Modal.js  Table.js
frontend/public/env/menus/: converterMenu.js  flowMenu.js  menu.js
frontend_prev/: tailwind.config.js
frontend_prev/app/: next-auth.js  page.jsx
frontend_prev/app/(site)/api/auth/: [...nextauth].js
frontend_prev/app/(site)/dashboard/: Page.tsx
frontend_prev/app/components/: AccountNavbar.tsx  GeneralNavbar.tsx  LoginButton.tsx
menus/: converterMenu.js  flowMenu.js  menu.js  stockMenu.js
