[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["AlphaPranav9102 <49816864+AlphaPranav9102@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
